welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot: error: not found: value growFlowers
	    growFlowers();
            ^FlowerPot:2: error: value c is not a member of object java.awt.Color
  setCouleurBrosse(Color.c)
                         ^FlowerPot:16: error: not found: value red
  flower(red)
         ^